--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "sass": "^1.32.8"
   },
   "dependencies": {
-    "axios": "^0.24.0"
+    "axios": "^0.24.0",
+    "infinite-scroll": "^4.0.1",
+    "lodash.debounce": "^4.0.8",
+    "notiflix": "^3.2.2",
+    "simplelightbox": "^2.10.1"
   }
 }
